support static path for PV provisioned with specific PVC

--- a/deploy/local-path-storage.yaml
+++ b/deploy/local-path-storage.yaml
@@ -106,7 +106,8 @@ data:
                     "node":"DEFAULT_PATH_FOR_NON_LISTED_NODES",
                     "paths":["/opt/local-path-provisioner"]
             }
-            ]
+            ],
+            "staticPvPath": true
     }
   setup: |-
     #!/bin/sh
